Blender crashes with relocating libraries in some cases. #95480

Closed
opened 2022-02-03 20:16:48 +01:00 by Facundo · 22 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-01 21:53, hash: 95fcb41841
Worked: 3.0.1

Exact steps for others to reproduce the error
T95480_simple.blend

  • Download the attached file.
  • Make a copy of it.
  • Create a new General template
  • Go to File -> Link -> [locate the original file] -> Collection -> Collection. It should import a single-bone rig.
  • In the Outliner change the Display Mode to "Blender File"
  • Relocate the library to its copy
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-01 21:53, hash: `95fcb41841` Worked: 3.0.1 **Exact steps for others to reproduce the error** [T95480_simple.blend](https://archive.blender.org/developer/F13037308/T95480_simple.blend) - Download the attached file. - Make a copy of it. - Create a new General template - Go to File -> Link -> [locate the original file] -> Collection -> Collection. It should import a single-bone rig. - In the Outliner change the Display Mode to "Blender File" - Relocate the library to its copy
Author

Added subscriber: @Facu

Added subscriber: @Facu

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can you upload archive where .blend files are in directory structure that resembles your case? I don't think I am able to recreate this case just from description alone.

Can you upload archive where .blend files are in directory structure that resembles your case? I don't think I am able to recreate this case just from description alone.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author

Hi Richard, I'm trying to simplify the blend file because is too big, but I'm not being able to reproduce it with a smaller file yet. I'll upload it as ssoon as I can. Thank you!

Hi Richard, I'm trying to simplify the blend file because is too big, but I'm not being able to reproduce it with a smaller file yet. I'll upload it as ssoon as I can. Thank you!
Member

Hi @Facu , Did you manage to create a simple .blend file?

Also check if crash is still replicable on latest development builds: https://builder.blender.org/download/daily/

Hi @Facu , Did you manage to create a simple .blend file? Also check if crash is still replicable on latest development builds: https://builder.blender.org/download/daily/
Author

Hi @PratikPB2123, sorry for the delay. I'll upload the file that can reproduce this. It's 268mb, sorry but I couldn't simplify it more than that, if I removed more things the bug could not be reproduced anymore, weird.
Here is the file: Samara44.blend

The bug can still be reproduced on the latest development build of Blender 3.2.0 Alpha.

These are the steps to follow:

  • Download the attached file.
  • Duplicate that file, so you should have the original and a copy
  • Create a new general scene in Blender
  • Go to File -> Link -> [locate the original file] -> Collection -> Samara...................... It should import a character.
  • Select the character and make it Library Override (Object -> Relations -> Make Library Override...)
  • Then, in the Outliner change the Display Mode to "Blender File"
  • Still in the Outliner, under Libraries, you should see the linked file
  • Right click the linked file, and choose Relocate
  • In the dialog select the duplicated file. Blender crashes.

Important: There are certain cases where blender does not crash, but I can say that it crashes 99% of the times.
For anything else you need, you can ask me.

Hi @PratikPB2123, sorry for the delay. I'll upload the file that can reproduce this. It's 268mb, sorry but I couldn't simplify it more than that, if I removed more things the bug could not be reproduced anymore, weird. Here is the file: [Samara44.blend](https://archive.blender.org/developer/F12941572/Samara44.blend) The bug can still be reproduced on the latest development build of Blender 3.2.0 Alpha. These are the steps to follow: - Download the attached file. - Duplicate that file, so you should have the original and a copy - Create a new general scene in Blender - Go to File -> Link -> [locate the original file] -> Collection -> Samara...................... It should import a character. - Select the character and make it Library Override (Object -> Relations -> Make Library Override...) - Then, in the Outliner change the Display Mode to "Blender File" - Still in the Outliner, under Libraries, you should see the linked file - Right click the linked file, and choose Relocate - In the dialog select the duplicated file. Blender crashes. Important: There are certain cases where blender does not crash, but I can say that it crashes 99% of the times. For anything else you need, you can ask me.

To me it crashed in step Then, in the Outliner change the Display Mode to "Blender File" so will confirm and include steps up to this point.

To me it crashed in step `Then, in the Outliner change the Display Mode to "Blender File"` so will confirm and include steps up to this point.
Richard Antalik changed title from Blender crashes when trying to relocate a linked file to Blender crashes with overridden rig 2022-03-30 03:06:08 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @satishgoda1

Added subscriber: @satishgoda1
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cant actually reproduce here.

@iss: can you still reporduce this?
If so, it should be marked as high prio since this is a regression.

Cant actually reproduce here. @iss: can you still reporduce this? If so, it should be marked as high prio since this is a regression.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2022-04-28 17:48:25 +02:00

Can confirm crash here when relocating

Can confirm crash here when relocating

Some updates:

  • Overriding is irrelevant to the issue, it is reproducible by merely linking and then relocating the lib.
  • Here is a much smaller reproducible libfile case: T95480_simple.blend

@lichtwerk I cannot reproduce any issue from the Outliner with current master though... Crash for me is from weird issue in relocating code itself.

Some updates: * Overriding is irrelevant to the issue, it is reproducible by merely linking and then relocating the lib. * Here is a much smaller reproducible libfile case: [T95480_simple.blend](https://archive.blender.org/developer/F13037308/T95480_simple.blend) @lichtwerk I cannot reproduce any issue from the Outliner with current master though... Crash for me is from weird issue in relocating code itself.

(crash happens when the Armature obdata has a driver using its object armature as source)

(crash happens when the Armature obdata has a driver using its object armature as source)
Bastien Montagne changed title from Blender crashes with overridden rig to Blender crashes with relocating libraries in some cases. 2022-04-29 16:52:30 +02:00

This issue was referenced by 3c7a6718dd

This issue was referenced by 3c7a6718ddc52fbf2a6a8d57822007738699fe96

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @DavidGilson-1

Added subscriber: @DavidGilson-1

Confirming issue - my own projects are crashing when relocating libraries.

Confirming issue - my own projects are crashing when relocating libraries.
Member

If this still happens in fresh builds, please open a new report for this

If this still happens in fresh builds, please open a new report for this
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95480
No description provided.